# Hotel_Tourist

./: README.md  pyproject.toml
hotel/: db.sqlite3
hotel/booking/: forms.py  models.py  urls.py  views.py
hotel/booking/migrations/: 0001_initial.py
hotel/core/: const.py  forms.py  models.py  urls.py  views.py  widgets.py
hotel/core/migrations/: 0001_initial.py  0002_booking.py  0003_delete_booking.py  0004_delete_userinfo.py
hotel/hotel/: settings.py  urls.py
hotel/hotel_room/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
hotel/hotel_room/migrations/: 0001_initial.py  0002_room_photo.py  0003_alter_room_options_alter_room_photo.py  0004_booking.py  0005_rename_created_on_booking_created_at.py  0006_remove_room_photo_delete_booking.py
hotel/static/: login.css  sidebar.css  style.css
hotel/templates/: base.html  sidebar.html
hotel/templates/booking/: create.html  list.html
hotel/templates/core/: login.html  register.html
hotel/templates/core/roles/: create.html  list.html  update.html
hotel/templates/core/users/: list.html  update.html
hotel/templates/hotel_room/: booking.html  create.html  detail.html  list.html  update.html
