[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Tatiana Kazinets <tanyapilipshanova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
automium-web = "^0.1.1"
qs = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
